fix link spacing

--- a/Website/networkAnalysis.css
+++ b/Website/networkAnalysis.css
@@ -18,7 +18,7 @@ div.id{
     border: 5px solid #292724;
 }
 
-a.class.body{
+a.body{
   text-decoration: underline;
    color: #6D6C63;  
    margin: 0;
